// services/gnn_service/protos/gnn_service.proto
// gRPC service definition для GNN inference

syntax = "proto3";

package gnn_service;

// GNN Inference Service
service GNNInference {
  // Run diagnosis on equipment
  rpc Predict(DiagnosisRequest) returns (DiagnosisResponse);
  
  // Batch inference
  rpc BatchPredict(BatchDiagnosisRequest) returns (stream DiagnosisResponse);
  
  // Get model info
  rpc GetModelInfo(Empty) returns (ModelInfo);
  
  // Health check
  rpc HealthCheck(Empty) returns (HealthStatus);
}

// Empty message
message Empty {}

// Time window for data query
message TimeWindow {
  string start_time = 1;  // ISO 8601 timestamp
  string end_time = 2;    // ISO 8601 timestamp
}

// Diagnosis request
message DiagnosisRequest {
  string equipment_id = 1;
  TimeWindow time_window = 2;
  repeated string sensor_types = 3;
  string tenant_id = 4;
  string request_id = 5;
}

// Batch diagnosis request
message BatchDiagnosisRequest {
  repeated DiagnosisRequest requests = 1;
}

// Component health score
message ComponentHealth {
  string component_id = 1;
  string component_type = 2;
  float health_score = 3;        // 0.0 - 1.0
  float degradation_rate = 4;    // Rate of degradation
  repeated string anomalies = 5;
}

// Anomaly detection result
message Anomaly {
  string anomaly_type = 1;
  string severity = 2;          // low, medium, high, critical
  float confidence = 3;         // 0.0 - 1.0
  string description = 4;
  repeated string affected_components = 5;
}

// Maintenance recommendation
message Recommendation {
  string action = 1;
  string priority = 2;          // low, medium, high, urgent
  string component = 3;
  string description = 4;
  int32 estimated_days_to_failure = 5;
}

// Diagnosis response
message DiagnosisResponse {
  string request_id = 1;
  string equipment_id = 2;
  repeated ComponentHealth component_health = 3;
  repeated Anomaly anomalies = 4;
  repeated Recommendation recommendations = 5;
  float overall_health_score = 6;
  string status = 7;            // success, failed
  string error_message = 8;
  int64 inference_time_ms = 9;
}

// Model information
message ModelInfo {
  string model_name = 1;
  string model_version = 2;
  string architecture = 3;
  int32 num_parameters = 4;
  string training_date = 5;
  float validation_accuracy = 6;
}

// Health status
message HealthStatus {
  string status = 1;            // healthy, degraded, unhealthy
  bool model_loaded = 2;
  bool database_connected = 3;
  bool gpu_available = 4;
  float gpu_utilization = 5;
  int64 total_requests = 6;
  int64 failed_requests = 7;
}
